# Solvers

./: CMakeLists.txt  GUI.py  GUI_residuals.py  GUI_residuals_c.py  GUI_solution.py  PDE.hpp  PDE_2D.hpp  PDEthrd.hpp  Preconditioners.hpp  README  Solvers.hpp  VectorOperations.hpp  main  main.cpp
gui/: GUI.py  GUI_residuals.py  GUI_residuals_c.py  GUI_solution.py
